--- a/Bab I - Pendahuluan.tex
+++ b/Bab I - Pendahuluan.tex
@@ -31,13 +31,13 @@ Meskipun tim \textit{Enterprise Architecture} di Paragon Corp baru dibentuk seja
 Kondisi ini menyebabkan duplikasi sistem dan ketiadaan standar arsitektural karena belum ada referensi terhadap arsitektur sebelumnya.
 Evaluasi tata kelola AE menemukan bahwa aspek perancangan AE yang sudah didefinisikan, namun belum dikelola secara menyeluruh akan menghambat efektivitas AE sebagai kerangka strategis \autocite{ghiffari2022evaluasi}.
 
-Dengan mempertimbangkan tantangan tersebut, tugas akhir ini berfokus kepada analisis perbaikan tata kelola AE sehingga meningkatkan efektivitas peran AE dalam mengambil keputusan di Paragon Corp. 
+Dengan mempertimbangkan tantangan tersebut, Tugas Akhir ini berfokus kepada analisis perbaikan tata kelola AE sehingga meningkatkan efektivitas peran AE dalam mengambil keputusan di Paragon Corp. 
 
 % --- Rumusan Masalah ---
 \section{Rumusan Masalah}
 Berdasarkan latar belakang yang telah diuraikan sebelumnya, masalah utama yang dihadapi yaitu tata kelola AE pada Paragon Corp belum dijalankan secara formal.
 Hal ini bisa mengakibatkan duplikasi sistem dan ketiadaan standar arsitektural.
-Masalah ini menjadi landasan yang akan diselesaikan pada tugas akhir ini.
+Masalah ini menjadi landasan yang akan diselesaikan pada Tugas Akhir ini.
 Rumusan masalah dijabarkan sebagai berikut.
 \begin{enumerate}
 \item	Bagaimana alur tata kelola AE saat ini di Paragon Corp?
@@ -47,9 +47,9 @@ Rumusan masalah dijabarkan sebagai berikut.
 
 % --- Tujuan ---
 \section{Tujuan}
-Berdasarkan rumusan masalah yang telah dipaparkan sebelumnya, tujuan utama dari pengerjaan tugas akhir ini yaitu merancang model perbaikan tata kelola AE untuk meningkatkan efektivitas dalam mengambil keputusan arsitektur.
+Berdasarkan rumusan masalah yang telah dipaparkan sebelumnya, tujuan utama dari pengerjaan Tugas Akhir ini yaitu merancang model perbaikan tata kelola AE untuk meningkatkan efektivitas dalam mengambil keputusan arsitektur.
 Untuk mendukung tujuan tersebut, ada tujuan pendorong agar tujuan utama berhasil diimplementasikan.
-Tujuan dari tugas akhir ini adalah sebagai berikut:
+Tujuan dari Tugas Akhir ini adalah sebagai berikut:
 \begin{enumerate}
 \item	Menganalisis kondisi tata kelola AE yang saat ini diterapkan di Paragon Corp.
 \item	Mengidentifikasi \textit{gap} antara kondisi saat ini dengan \textit{best practice} AE pada tingkat kematangan level 3 tata kelola AE.
@@ -58,14 +58,14 @@ Tujuan dari tugas akhir ini adalah sebagai berikut:
 
 % --- Metodologi Pengerjaan TA ---
 \section{Metodologi}
-Tahapan dalam pengerjaan tugas akhir ini dilakukan dengan menggunakan metodologi \textit{Design Research Science Methodology} (DSRM).
+Tahapan dalam pengerjaan Tugas Akhir ini dilakukan dengan menggunakan metodologi \textit{Design Research Science Methodology} (DSRM).
 DSRM adalah pendekatan yang berfokus dalam memecahkan masalah dan dirancang untuk memberikan solusi terhadap suatu masalah yang dihadapi organisasi \autocite{absari2022design}.
 Metodologi DSRM terdiri dari enam tahapan yang dijalankan secara sistematis.
 \begin{enumerate}
     \item \textit{Problem Identification} \\
     Pada tahapan ini, penulis melakukan eksporasi dalam proses tata kelola AE.
     Tahapan ini dilakukan dengan analisis dokumen terkait tata kelola AE dan melakukan wawancara dengan Tim \textit{Enterprise Architect} Paragon Corp untuk mendapatkan informasi tentang proses tata kelola saat ini.
-    Tahapan ini menghasilkan pernyataan masalah yang jelas dan ruang lingkup pengerjaan tugas akhir yang difokuskan. \\
+    Tahapan ini menghasilkan pernyataan masalah yang jelas dan ruang lingkup pengerjaan Tugas Akhir yang difokuskan. \\
 
     \item \textit{Define Objectives of a Solution} \\
     Pada tahapan ini, penulis menetapkan tujuan yang harus dicapai oleh solusi berdasarkan masalah yang telah dianalisis.
