--- a/Bab III - Analisis-Masalah.tex
+++ b/Bab III - Analisis-Masalah.tex
@@ -187,7 +187,7 @@ Permasalahan tersebut dapat dikategorikan sebagai berikut:
   Program-program seperti penetapan \textit{Objective Key Results} (OKR) di Direktorat Teknologi Informasi (TI) telah diimplementasikan untuk mendorong kebiasaan mendokumentasi, namun efektivitasnya sangat bergantung pada komitmen pribadi masing-masing anggota, bukan pada sistem kontrol formal dari manajemen. \\
 \end{enumerate}
 
-Permasalahan yang akan diselesaikan dalam tugas akhir ini yaitu pelaksanaan \textit{EA impact analysis} yang belum sesuai dengan tata kelola yang diharapkan.
+Permasalahan yang akan diselesaikan dalam Tugas Akhir ini yaitu pelaksanaan \textit{EA impact analysis} yang belum sesuai dengan tata kelola yang diharapkan.
 Permasalahan ini dipilih karena Tim \textit{Enterprise Architect} Paragon Corp menilai bahwa prosedur \textit{EA impact analysis} yang ada saat ini masih belum jelas.
 Oleh karena itu, pada Bab IV akan dibahas rancangan solusi untuk memperbaiki proses \textit{EA impact analysis} dengan standar yang diharapkan organisasi.
 
