--- a/Bab V - Rencana-Selanjutnya.tex
+++ b/Bab V - Rencana-Selanjutnya.tex
@@ -4,15 +4,32 @@
 \chapter{RENCANA SELANJUTNYA}
 \label{chap:rencana-selanjutnya}
 \section{\textit{Timeline} Implementasi}
-Tahapan dalam implementasi tugas akhir ini dilakukan selama 14 minggu. 
+Tahapan dalam implementasi Tugas Akhir ini dilakukan selama 14 minggu. 
 \textit{timeline} disusun dengan mempertimbangkan aktivitas setiap tahap dan kesesuaian dengan jadwal kalender akademik.
 Tabel \ref{tbl:timeline} menunjukkan detail rencana \textit{implementasi} selama 14 minggu. \\
 \input{table/tabelTimeline.tex}
 
 \section{Desain Pengujian dan Evaluasi}
-xxx
+\subsection{Verifikasi Kesesuaian terhadap Standar TOGAF}
+Tahapan verifikasi dilakukan untuk memastikan mekanisme yang dibuat mengikuti konsep TOGAF.
+Langkah verifikasi dilakukan dengan menyusun \textit{checklist} yang berisi aspek arsitektur yang dianalisis pada setiap \textit{domain}, 
+lalu memeriksa mekanisme yang digunakan telah memuat seluruh aspek tersebut. 
+Keluaran tahap ini berupa \textit{checklist} verifikasi dan catatan koreksi jika ditemukan ketidaksesuaian.
+
+\subsection{Validasi Konseptual}
+Tahapan validasi dilakukan untuk melihat apakah mekanisme yang diracang sudah cukup jelas dan sesuai dengan kebutuhan arsitektur.
+Penilaian dilakukan dengan meninjau kembali alur mekanisme, kelengkapan aspek analisis, dan kejelasan \textit{template} yang digunakan.
+Selanjutnya, konsep dan struktur mekanisme dikonsultasikan kepada Tim \textit{Enterprise Architecture} sebagai pihak yang memahami proses arsitektur di perusahaan.
+Keluaran tahap ini berupa catatan evaluasi dan revisi yang diperlukan.
+
+\subsection{Simulasi Mekanisme}
+Simulasi dilakukan untuk melihat bagaimana mekanisme bekerja apabila diterapkan pada contoh kasus sederhana.
+Satu dokumen URS digunakan sebagai bahan uji, kemudian seluruh langkah analisis dijalankan secara berurutan.
+Dari proses ini, dicatat apakah ada bagian yang kurang jelas, terlalu rumit, atau tidak sesuai dengan alur yang direncanakan.
+Hasil pengamatan digunakan untuk memperbaiki dan menyempurnakan mekanisme sebelum memasuki tahap akhir.
+Keluaran tahap ini berupa hasil simulasi serta daftar perbaikan yang diperlukan.
 
 \section{Analisis Risiko dan Mitigasi}
-Pada pelaksanaan tugas akhir, terdapat beberapa potensi risiko yang mungkin dapat memengaruhi keberhasilan implementasi.
-Tabel \ref{tbl:resiko-mitigasi} menunjukkan risiko-risiko yang mungkin terjadi dalam pengerjaan tugas akhir ini.
+Pada pelaksanaan Tugas Akhir, terdapat beberapa potensi risiko yang mungkin dapat memengaruhi keberhasilan implementasi.
+Tabel \ref{tbl:resiko-mitigasi} menunjukkan risiko-risiko yang mungkin terjadi dalam pengerjaan Tugas Akhir ini.
 \input{table/tabelRisiko.tex}
