--- a/Bab I - Pendahuluan.tex
+++ b/Bab I - Pendahuluan.tex
@@ -17,9 +17,9 @@ Karakterisitik AE harus diintegrasikan dengan praktik manajemen tata kelola agar
 Penerapan tata kelola AE juga memastikan pembagian peran, tanggung jawab, dan mekanisme evaluasi untuk memastikan keberlanjutan AE.
 
 Untuk memastikan tata kelola AE berjalan efektif, TOGAF menyediakan \textit{Architecture Capability Maturity Model} (ACMM) yang digunakan untuk menilai tingkat kematangan kapabilitas arsitektur organisasi.
+Model ini memiliki 5 tingkatan dan pada level 3 (\textit{defined}), proses tata kelola AE telah terdokumentasi, dilaksanakan secara konsisten, dan memiliki struktur peran yang jelas \autocite{TOGAF_Standard_10th}.
 Saat ini, tingkat kematangan tata kelola AE Paragon Corp berada pada level 2.
 Oleh karena itu level 3 akan dijadikan acuan untuk menilai tata kelola AE Paragon Corp dan mengevaluasi dimensi yang perlu diperbaiki.
-Model ini memiliki 5 tingkatan dan pada level 3 (\textit{defined}), proses tata kelola AE telah terdokumentasi, dilaksanakan secara konsisten, dan memiliki struktur peran yang jelas \autocite{TOGAF_Standard_10th}.
 
 Penerapan AE memerlukan evaluasi terhadap seberapa efektif tata kelolanya.
 Efektivitas ini bisa diketahui melalui tingkat kepatuhan proyek terhadap standar, dokumentasi yang dihasilkan, dan keterlibatan pemangku kepentingan \autocite{foorthuis2016theory}.
@@ -40,7 +40,6 @@ Hal ini bisa mengakibatkan duplikasi sistem dan ketiadaan standar arsitektural.
 Masalah ini menjadi landasan yang akan diselesaikan pada Tugas Akhir ini.
 Rumusan masalah dijabarkan sebagai berikut.
 \begin{enumerate}
-\item	Bagaimana alur tata kelola AE saat ini di Paragon Corp?
 \item	Apa saja \textit{gap} untuk mencapai tingkat kematangan level 3 tata kelola AE?
 \item	Bagaimana rancangan tata kelola AE yang lebih terstruktur?
 \end{enumerate}
@@ -51,7 +50,6 @@ Berdasarkan rumusan masalah yang telah dipaparkan sebelumnya, tujuan utama dari 
 Untuk mendukung tujuan tersebut, ada tujuan pendorong agar tujuan utama berhasil diimplementasikan.
 Tujuan dari Tugas Akhir ini adalah sebagai berikut:
 \begin{enumerate}
-\item	Menganalisis kondisi tata kelola AE yang saat ini diterapkan di Paragon Corp.
 \item	Mengidentifikasi \textit{gap} antara kondisi saat ini dengan \textit{best practice} AE pada tingkat kematangan level 3 tata kelola AE.
 \item	Merancang model perbaikan tata kelola AE yang efektif dan sesuai dengan konteks organisasi.
 \end{enumerate}
@@ -74,6 +72,7 @@ Metodologi DSRM terdiri dari enam tahapan yang dijalankan secara sistematis.
 
     \item \textit{Design and Development} \\
     Pada tahapan ini, penulis menentukan \textit{requirement} kemudian merancang solusi berdasarkan \textit{requirement} yang sudah ditentukan.
+    Solusi disusun berdasarkan kerangka kerja arsitektur TOGAF untuk memastikan solusi mencakup aspek penting.
     Selain itu, penulis merancang solusi untuk menjawab permasalahan tata kelola AE Paragon Corp.
     Peracangan dilakukan berdasarkan prinsip-prinsip AE dan standar perusahaan. \\
     
