--- a/Bab II - Studi-Literatur.tex
+++ b/Bab II - Studi-Literatur.tex
@@ -185,7 +185,7 @@ Fitur ini mendukung proses inti tata kelola seperti dokumentasi dan peninjauan a
 Selain itu, keberadaaan repositori tunggal ini mencegah duplikasi sistem \autocite{LeanixEAGov}.
 
 \section{Studi dan Penelitian Terkait}
-\subsection{Implementasi Arsitektur \textit{Enterprise} di Pemerintahan}
+\subsection{Penilaian Arsitektur \textit{Enterprise} di Pemerintahan}
 Penelitian yang dilakukan oleh \textcite{hanafi2023implementation} menguji hubungan antara kapabilitas Arsitektur \textit{Enterprise} (AE) dan tata kelola AE terhadap kinerja organisasi.
 Penelitian ini berfokus pada pemerintah daerah Provinsi Jawa Barat dalam konteks implementasi Sistem Pemerintahan Berbasis Elektronik (SPBE).
 Hasil analisis menunjukkan bahwa kapabilitas AE dan tata kelola AE memberikan pengaruh positif dan signifikan terhadap kinerja organisasi.
@@ -227,7 +227,7 @@ Gambar \ref{gambar:corr} menunjukkan hubungan konseptual antara Arsitektur \text
 \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
   \centering
   \captionsetup{justification=centering}
-      \includegraphics[width=1\textwidth]{image/konseptualEA.png}
+      \includegraphics[width=1\textwidth]{image/konseptual2.png}
   \caption{Hubungan Konseptual Antara AE, Tata Kelola, dan EAMM}
   \label{gambar:corr}
 \end{figure}
