--- a/Bab V - Rencana-Selanjutnya.tex
+++ b/Bab V - Rencana-Selanjutnya.tex
@@ -5,7 +5,8 @@
 \label{chap:rencana-selanjutnya}
 \section{\textit{Timeline} Implementasi}
 Tahapan dalam implementasi Tugas Akhir ini dilakukan selama 14 minggu. 
-\textit{timeline} disusun dengan mempertimbangkan aktivitas setiap tahap dan kesesuaian dengan jadwal kalender akademik.
+Penyusunan Tugas Akhir direncanakan berlangsung dari awal Februari 2026 hingga Mei 2026.
+\textit{Timeline} disusun dengan mempertimbangkan aktivitas setiap tahap dan kesesuaian dengan jadwal kalender akademik.
 Tabel \ref{tbl:timeline} menunjukkan detail rencana \textit{implementasi} selama 14 minggu. \\
 \input{table/tabelTimeline.tex}
 
