--- a/ProposalTA.tex
+++ b/ProposalTA.tex
@@ -210,7 +210,7 @@
     
     \vspace*{2cm}
     
-    {\Large\bfseries ANALISIS PERBAIKAN ALUR TATA KELOLA ARSITEKTUR ENTERPRISE UNTUK INISIATIF DIGITAL DI PERUSAHAAN BEAUTY FMCG PARAGON CORP}\\
+    {\Large\bfseries ANALISIS PERBAIKAN TATA KELOLA ARSITEKTUR ENTERPRISE UNTUK INISIATIF DIGITAL DI PERUSAHAAN BEAUTY FMCG PARAGON CORP}\\
      \vspace{4cm}
 
     {\Large \textbf{Proposal Tugas Akhir}}\\
@@ -257,7 +257,7 @@
   \textbf{\large LEMBAR PENGESAHAN}\\[1cm]
   \vspace*{1.5cm}
     
-  {\large\bfseries ANALISIS PERBAIKAN ALUR TATA KELOLA ARSITEKTUR ENTERPRISE UNTUK INISIATIF DIGITAL DI PERUSAHAAN BEAUTY FMCG PARAGON CORP}\\
+  {\large\bfseries ANALISIS PERBAIKAN TATA KELOLA ARSITEKTUR ENTERPRISE UNTUK INISIATIF DIGITAL DI PERUSAHAAN BEAUTY FMCG PARAGON CORP}\\
      \vspace{2cm}
 
   {\Large \textbf{Proposal Tugas Akhir}}\\
